Fix header z-index not being respected

--- a/public/src/app/app.component.scss
+++ b/public/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .header {
     display: list-item;
     position: sticky;
+    z-index: 1000;
 }
 
 .main-container {
